changes to address Trevor's review comments